Add get list of consumables endpoint
Fix health loss bug
Add unit tests
Add documentation
Bump version
