# tskswp-rest-api/src/main/kotlin/com/tasksweeper/controller/ConsumableController.kt
@@ -5,7 +5,6 @@ import com.tasksweeper.exceptions.InvalidConsumableIdException
 import com.tasksweeper.service.ConsumableService
 import io.ktor.application.*
 import io.ktor.auth.*
-import io.ktor.http.*
 import io.ktor.response.*
 import io.ktor.routing.*
 import org.koin.ktor.ext.inject
@@ -16,12 +15,15 @@ fun Routing.consumableController() {
         post("/consumable/{consumableId}/buy") {
             consumableService.obtainItem(
                 call.getUsername(),
-                call.parameters["consumableId"]!!.let { it.toLongOrNull() ?: throw InvalidConsumableIdException(it)}
-            ).let { consumable ->
-                call.respond(
-                    HttpStatusCode.OK,
-                    consumable
-                )
+                call.parameters["consumableId"]!!.let { it.toLongOrNull() ?: throw InvalidConsumableIdException(it) }
+            ).let {
+                call.respond(it)
+            }
+        }
+
+        get("/consumables") {
+            consumableService.getAllConsumables().let {
+                call.respond(it)
             }
         }
     }
