# tskswp-rest-api/src/main/resources/openapi.json
@@ -3,7 +3,7 @@
   "servers": [],
   "info": {
     "description": "Documentation for the Tasksweeper API.",
-    "version": "2.3.0",
+    "version": "2.4.0",
     "title": "Tasksweeper API",
     "contact": {
       "email": "filipe3xf@gmail.com"
@@ -32,6 +32,38 @@
     }
   ],
   "paths": {
+    "/consumables": {
+      "get": {
+        "tags": [
+          "Consumable"
+        ],
+        "summary": "Gets a list of all Consumables",
+        "operationId": "getConsumables",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of all consumables",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Consumable"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "JWT is invalid."
+          }
+        }
+      }
+    },
     "/accountStatus": {
       "get": {
         "tags": [
